crates/pack/tests/compile_fail/effect_proposals_field_private.stderr
error[E0616]: field `proposals` of struct `AgentEffect` is private
 --> tests/compile_fail/effect_proposals_field_private.rs:8:12
  |
8 |     effect.proposals.push(ProposedFact::new(
  |            ^^^^^^^^^ private field
  |
help: a method `proposals` also exists, call it with parentheses
  |
8 |     effect.proposals().push(ProposedFact::new(
  |                     ++
